test_scores/negative_dimers/features/Q6IA86.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6IA86.pkl.xz